--- a/ninchatsdk/src/main/res/layout/control_buttons.xml
+++ b/ninchatsdk/src/main/res/layout/control_buttons.xml
@@ -29,23 +29,26 @@
     <Button
         android:id="@+id/ninchat_button_previous"
         style="@style/NinchatTheme.Button.Dialog.Close"
-        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
-        android:layout_height="wrap_content"
+        android:maxWidth="@dimen/ninchat_chat_control_follow_button_width"
+        android:layout_width="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="30dp"
-        android:text="Back"
-        android:visibility="invisible" />
+        android:singleLine="true"
+        android:visibility="invisible"
+        android:text="Queue name that is far too long to fit in one line and extends to multiple lines" />
 
     <Button
         android:id="@+id/ninchat_button_next"
         style="@style/NinchatTheme.Button.Dialog"
-        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
+        android:maxWidth="@dimen/ninchat_chat_control_follow_button_width"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="30dp"
-        android:text="Continue"
-        android:visibility="invisible" />
+        android:singleLine="true"
+        android:visibility="invisible"
+        android:text="Queue name that is far too long to fit in one line and extends to multiple lines" />
 
 </RelativeLayout>
