--- a/ninchatsdk/src/main/res/layout/dropdown_item_text_view.xml
+++ b/ninchatsdk/src/main/res/layout/dropdown_item_text_view.xml
@@ -5,4 +5,6 @@
     android:minHeight="50dp"
     android:paddingStart="10dp"
     android:gravity="center_vertical"
+
+    style="@style/NinchatTheme.Dropdown.Text"
     xmlns:android="http://schemas.android.com/apk/res/android" />
