--- a/ninchatsdk/src/main/res/layout/text_view.xml
+++ b/ninchatsdk/src/main/res/layout/text_view.xml
@@ -1,7 +1,9 @@
-<TextView android:id="@+id/text_view_content"
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text_view_content"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:clickable="true"
     android:text="First, tell a bit about your situation so we can help you better."
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:textColor="@color/ninchat_color_text_normal"
     android:focusable="true" />
