--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -89,8 +89,6 @@
     <dimen name="ninchat_review_activity_skip_bottom_margin">60dp</dimen>
 
 
-    <dimen name="ninchat_chat_control_follow_button_height">70dp</dimen>
-    <dimen name="ninchat_chat_control_follow_button_outer_margin">21dp</dimen>
     <dimen name="ninchat_chat_control_follow_button_width">200dp</dimen>
 
 
@@ -101,7 +99,7 @@
     <dimen name="items_margin_top">25dp</dimen>
     <dimen name="items_margin_left">15dp</dimen>
     <dimen name="items_margin_right">15dp</dimen>
-    <dimen name="label_text_size">20sp</dimen>
+    <dimen name="ninchat_label_text_size">20sp</dimen>
     <dimen name="radio_btn_margin_start">8dp</dimen>
     <dimen name="radio_btn_padding_start">10dp</dimen>
 
