--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -102,6 +102,11 @@
         <!--<item name="android:windowNoTitle">true</item>-->
     </style>
 
-    <style name="NinchatTheme.Radio.NotSelected" parent="NinchatTheme.MultiChoice" />
+    <style name="NinchatTheme.Radio.Selected" parent="NinchatTheme.MultiChoice" >
+        <item name="android:textColor">@color/ninchat_color_radio_item_selected_text</item>
+    </style>
+    <style name="NinchatTheme.Radio.UnSelected" parent="NinchatTheme.MultiChoice" >
+        <item name="android:textColor">@color/ninchat_color_radio_item_unselected_text</item>
+    </style>
 
 </resources>
