Update style components color  - border error  - border focus  - border unfocus  - dropdown selected  - radio button

--- a/ninchatsdk/src/main/res/drawable/ninchat_dropdown_not_selected.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_dropdown_not_selected.xml
@@ -4,7 +4,7 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="2dp"
-        android:color="#A2A2A2" />
+        android:color="@color/ninchat_color_hint" />
     <padding
         android:bottom="3dp"
         android:left="4dp"
