--- a/ninchatsdk/src/main/res/drawable/ninchat_border_with_error.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_border_with_error.xml
@@ -5,6 +5,6 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="#983637" />
+        android:color="@color/ninchat_color_error_background" />
     <corners android:radius="8dp" />
 </shape>
