--- a/ninchatsdk/src/main/res/drawable/ninchat_border_with_focus.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_border_with_focus.xml
@@ -5,6 +5,6 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="#242424" />
+        android:color="@color/ninchat_colorPrimary" />
     <corners android:radius="8dp" />
 </shape>
