--- a/ninchatsdk/src/main/res/drawable/ninchat_border_with_unfocus.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_border_with_unfocus.xml
@@ -5,6 +5,6 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="#A2A2A2" />
+        android:color="@color/ninchat_color_hint" />
     <corners android:radius="8dp" />
 </shape>
