--- a/ninchatsdk/src/main/res/drawable/ninchat_radio_button.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_radio_button.xml
@@ -5,7 +5,7 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="#983637" />
+        android:color="@color/ninchat_color_error_background" />
     <corners android:radius="8dp" />
 </shape>
 
