--- a/ninchatsdk/src/main/res/layout/checkbox_simple.xml
+++ b/ninchatsdk/src/main/res/layout/checkbox_simple.xml
@@ -2,7 +2,8 @@
     android:id="@+id/checkbox_simple"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/ninchat_chat_bubble_left_repeated">
 
     <CheckBox
         android:id="@+id/ninchat_checkbox"
