--- a/ninchatsdk/src/main/res/layout/dropdown_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/dropdown_with_label.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/ninchat_chat_bubble_left_repeated">
 
     <TextView
         android:id="@+id/dropdown_text_label"
