--- a/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:theme="@style/NinchatTheme.Questionnaire.Label"
-        android:layout_marginBottom="@dimen/margin_bottom"
+        android:layout_marginBottom="@dimen/ninchat_item_margin_bottom"
         android:id="@+id/radio_option_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
