--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -93,15 +93,13 @@
 
 
     <!-- Questionnaire-->
-    <dimen name="margin_start">15dp</dimen>
-    <dimen name="margin_end">15dp</dimen>
-    <dimen name="margin_bottom">10dp</dimen>
-    <dimen name="items_margin_top">25dp</dimen>
-    <dimen name="items_margin_top_questionnaire_item">15dp</dimen>
-    <dimen name="items_margin_left">15dp</dimen>
-    <dimen name="items_margin_right">15dp</dimen>
-    <dimen name="ninchat_label_text_size">20sp</dimen>
-    <dimen name="radio_btn_margin_start">8dp</dimen>
-    <dimen name="radio_btn_padding_start">10dp</dimen>
+    <dimen name="ninchat_item_margin_start">15dp</dimen>
+    <dimen name="ninchat_item_margin_end">15dp</dimen>
+    <dimen name="ninchat_item_margin_bottom">10dp</dimen>
+    <dimen name="ninchat_items_margin_top">25dp</dimen>
+    <dimen name="ninchat_items_margin_left">15dp</dimen>
+    <dimen name="ninchat_items_margin_right">15dp</dimen>
+    <dimen name="ninchat_items_margin_top_questionnaire">15dp</dimen>
+    <dimen name="ninchat_item_label_text_size">20sp</dimen>
 
 </resources>
