--- a/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
@@ -14,6 +14,7 @@
         tools:text="Element label"/>
 
     <android.support.v7.widget.RecyclerView
+        android:background="@color/ninchat_color_transparent"
         android:id="@+id/ninchat_chat_radio_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
