--- a/ninchatsdk/src/main/res/layout/control_buttons.xml
+++ b/ninchatsdk/src/main/res/layout/control_buttons.xml
@@ -1,62 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:id="@+id/ninchat_control_button_root"
+    android:orientation="horizontal">
 
     <ImageView
-        style="@style/NinchatTheme.Button.Previous"
-        android:tint="@color/ninchat_color_button_secondary_text"
-
+        android:visibility="gone"
         android:id="@+id/ninchat_image_button_previous"
-        android:maxWidth="@dimen/ninchat_chat_control_follow_button_width"
-
-        android:layout_width="wrap_content"
+        style="@style/NinchatTheme.Button.Previous"
+        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"
         android:src="@drawable/ninchat_icon_back"
-        />
+        android:tint="@color/ninchat_color_button_secondary_text" />
+
+    <Button
+        android:visibility="gone"
+        android:id="@+id/ninchat_button_previous"
+        style="@style/NinchatTheme.Button.Previous"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.4"
+        android:minWidth="@dimen/ninchat_chat_control_follow_button_width"
+        android:maxWidth="@dimen/ninchat_chat_control_follow_button_width"
+        android:singleLine="true"
+        android:text="Queue name that is far too long to fit in one line and extends to multiple lines" />
+
+    <View
+        android:id="@+id/view_padding"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.4"
+        android:visibility="invisible" />
 
     <ImageView
-        style="@style/NinchatTheme.Button.Next"
-        android:tint="@color/ninchat_color_button_primary_text"
-
+        android:visibility="gone"
         android:id="@+id/ninchat_image_button_next"
-        android:maxWidth="@dimen/ninchat_chat_control_follow_button_width"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"
-        android:src="@drawable/ninchat_icon_next"
-        />
-
-    <Button
-        style="@style/NinchatTheme.Button.Previous"
-        android:id="@+id/ninchat_button_previous"
-        android:maxWidth="@dimen/ninchat_chat_control_follow_button_width"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"
-        android:singleLine="true"
-        android:text="Queue name that is far too long to fit in one line and extends to multiple lines"
-        />
-
-    <Button
         style="@style/NinchatTheme.Button.Next"
-        android:id="@+id/ninchat_button_next"
-        android:maxWidth="@dimen/ninchat_chat_control_follow_button_width"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="30dp"
-        android:singleLine="true"
-        android:text="Queue name that is far too long to fit in one line and extends to multiple lines"
-        />
+        android:src="@drawable/ninchat_icon_next"
+        android:tint="@color/ninchat_color_button_primary_text" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/ninchat_button_next"
+        style="@style/NinchatTheme.Button.Next"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.4"
+        android:minWidth="@dimen/ninchat_chat_control_follow_button_width"
+        android:singleLine="true"
+        android:text="Queue name that is far too long to fit in one line and extends to multiple lines" />
+</LinearLayout>
