--- a/ninchatsdk/src/main/res/drawable/ninchat_border_with_ok.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_border_with_ok.xml
@@ -6,5 +6,8 @@
     <stroke
         android:width="2dp"
         android:color="@color/ninchat_colorAccent" />
-    <corners android:radius="8dp" />
+    <corners android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="0dp" />
 </shape>
