Conversation like rating view

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
@@ -3,137 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/ninchat_review_activity"
     android:background="@color/ninchat_color_background_bottom"
     tools:context=".activities.NinchatReviewActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/ninchat_color_background_top"
-        android:padding="@dimen/ninchat_review_activity_top_padding"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
 
-        <TextView
-            android:id="@+id/ninchat_review_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="@dimen/ninchat_review_activity_title_top_margin"
-            tools:text="How was our customer service?"
-            android:textColor="@color/ninchat_color_text_top"
-            android:textStyle="bold" />
+    <include
+        layout="@layout/review_rating_normal_view"
+        android:visibility="gone"
+        android:id="@+id/review_rating_normal_view" />
 
-        <TextView
-            android:id="@+id/ninchat_review_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="@dimen/ninchat_review_activity_description_top_margin"
-            tools:text="Give a rating - select a smiley"
-            android:textColor="@color/ninchat_color_text_top" />
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/ninchat_review_activity_icons_top_margin">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/ninchat_review_activity_icon_margin"
-                android:onClick="onGoodClick">
-
-                <ImageView
-                    android:layout_width="@dimen/ninchat_review_activity_icon_size"
-                    android:layout_height="@dimen/ninchat_review_activity_icon_size"
-                    android:src="@drawable/ninchat_icon_rating_positive"
-                    android:layout_gravity="center_horizontal"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:contentDescription="@string/ninchat_review_positive" />
-
-                <TextView
-                    android:id="@+id/ninchat_review_positive"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/ninchat_review_activity_icon_text_margin"
-                    tools:text="@string/ninchat_review_positive"
-                    android:gravity="center_horizontal"
-                    android:textColor="@color/ninchat_color_rating_positive_text"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/ninchat_review_activity_icon_margin"
-                android:onClick="onFairClick">
-
-                <ImageView
-                    android:layout_width="@dimen/ninchat_review_activity_icon_size"
-                    android:layout_height="@dimen/ninchat_review_activity_icon_size"
-                    android:src="@drawable/ninchat_icon_rating_neutral"
-                    android:layout_gravity="center_horizontal"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:contentDescription="@string/ninchat_review_neutral"/>
-
-                <TextView
-                    android:id="@+id/ninchat_review_neutral"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/ninchat_review_activity_icon_text_margin"
-                    tools:text="@string/ninchat_review_neutral"
-                    android:gravity="center_horizontal"
-                    android:textColor="@color/ninchat_color_rating_neutral_text"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onPoorClick">
-
-                <ImageView
-                    android:layout_width="@dimen/ninchat_review_activity_icon_size"
-                    android:layout_height="@dimen/ninchat_review_activity_icon_size"
-                    android:src="@drawable/ninchat_icon_rating_negative"
-                    android:layout_gravity="center_horizontal"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:contentDescription="@string/ninchat_review_sad"/>
-
-                <TextView
-                    android:id="@+id/ninchat_review_negative"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/ninchat_review_activity_icon_text_margin"
-                    tools:text="@string/ninchat_review_sad"
-                    android:gravity="center_horizontal"
-                    android:textColor="@color/ninchat_color_rating_negative_text"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <include layout="@layout/review_rating_bot_view"
+        android:id="@+id/review_rating_bot_view" />
 
     <TextView
         android:id="@+id/ninchat_review_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Skip"
-        android:textColor="@color/ninchat_color_link"
-        android:padding="@dimen/ninchat_review_activity_skip_bottom_margin"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:onClick="onSkipClick"/>
-
+        android:layout_centerHorizontal="true"
+        android:onClick="onSkipClick"
+        android:padding="@dimen/ninchat_review_activity_skip_bottom_margin"
+        android:textColor="@color/ninchat_color_link"
+        tools:text="Skip" />
 </RelativeLayout>
