--- a/ninchatsdk/src/main/res/layout/bot_writing_indicator.xml
+++ b/ninchatsdk/src/main/res/layout/bot_writing_indicator.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bot_writing_indicator"
     android:background="@drawable/ninchat_chat_bubble_left_repeated"
     android:layout_marginTop="@dimen/ninchat_items_margin_top_questionnaire"
     android:layout_marginBottom="@dimen/ninchat_item_margin_bottom"
