--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left_repeated.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left_repeated.xml
@@ -10,7 +10,7 @@
                 android:radius="@dimen/ninchat_chat_activity_message_bubble_corner_radius"
                 android:topLeftRadius="0dp"
                 />
-            <solid android:color="@android:color/white" />
+            <solid android:color="@color/ninchat_colorWhite" />
         </shape>
     </item>
     <item>
