--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="ninchat_colorPrimaryDark">#0D2230</color>
     <color name="ninchat_colorAccent">#008aff</color>
     <color name="ninchat_colorDisabled">#abd8ff</color>
-    <color name="ninchat_colorOnClicked">#0270ce</color>
-    <color name="ninchat_background_colorDisabled">#F4F6F7</color>
+    <color name="ninchat_colorOnClicked">#006FCE</color>
+    <color name="ninchat_colorWhite">#FFFFFF</color>
+    <color name="ninchat_colorQuestionnaireDisabled">#B8B8B8</color>
+    <color name="ninchat_backgroundColorDisabled">#F8F8F8</color>
     <color name="ninchat_colorTimestamp">#7492AA</color>
     <color name="ninchat_activity_top_matter_background">@android:color/white</color>
     <color name="ninchat_activity_bottom_matter_background">#e9e9e9</color>
