--- a/ninchatsdk/src/main/res/layout/text_area.xml
+++ b/ninchatsdk/src/main/res/layout/text_area.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:autofillHints="..."
     android:gravity="top"
-    android:inputType="textMultiLine"
+    android:inputType="textMultiLine|textCapSentences"
     android:minHeight="80dp"
     android:maxLines="4"
     tools:hint="Enter text" />
