--- a/ninchatsdk/src/main/res/layout/text_field.xml
+++ b/ninchatsdk/src/main/res/layout/text_field.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:autofillHints="..."
-    android:inputType="text"
+    android:inputType="text|textCapSentences"
     android:minHeight="50dp"
     android:selectAllOnFocus="false"
     android:singleLine="true"
