--- a/ninchatsdk/src/main/res/values/questionnaire_styles.xml
+++ b/ninchatsdk/src/main/res/values/questionnaire_styles.xml
@@ -48,7 +48,10 @@
     <style name="NinchatTheme.Questionnaire.InputText" parent="NinchatTheme.Questionnaire">
         <item name="android:background">@drawable/ninchat_border_with_unfocus</item>
         <item name="android:textColorHint">@color/ninchat_color_textarea_text</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:paddingLeft">13dp</item>
+        <item name="android:paddingRight">13dp</item>
+        <item name="android:paddingTop">9dp</item>
+        <item name="android:paddingBottom">9dp</item>
     </style>
 
     <style name="NinchatTheme.Questionnaire.InputText.Cursor" parent="NinchatTheme.Questionnaire">
