--- a/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_questionnaire.xml
@@ -10,7 +10,7 @@
     tools:context=".activities.NinchatQuestionnaireActivity">
 
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:background="@android:color/transparent"
         android:id="@+id/questionnaire_form_rview"
         android:layout_width="match_parent"
