--- a/ninchatsdk/src/main/res/layout/item_chat_message.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_message.xml
@@ -106,7 +106,7 @@
                     android:visibility="gone"
                     tools:visibility="visible">
 
-                    <android.support.v7.widget.RecyclerView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/ninchat_chat_message_agent_multichoice_options"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
