--- a/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_review.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/ninchat_review_activity"
     android:background="@color/ninchat_color_background_bottom"
-    tools:context=".activities.NinchatReviewActivity">
+    tools:context=".ninchatreview.view.NinchatReviewActivity">
 
 
     <include
