--- a/ninchatsdk/src/main/res/drawable/ninchat_border_with_focus.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_border_with_focus.xml
@@ -5,7 +5,7 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="@color/ninchat_colorPrimary" />
+        android:color="#0D2230" />
     <corners
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
