--- a/ninchatsdk/src/main/res/drawable/ninchat_border_with_unfocus.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_border_with_unfocus.xml
@@ -5,7 +5,7 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="@color/ninchat_color_hint" />
+        android:color="#B8B8B8" />
     <corners
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
