--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left_repeated_disabled.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_bubble_left_repeated_disabled.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:gravity="top|left"><!-- android:gravity="top|left" android:drawable="@drawable/ninchat_chat_bubble_left_caret">-->
         <bitmap android:src="@drawable/ninchat_chat_bubble_left_caret"
-            android:tint="@color/ninchat_backgroundColorDisabled"
+            android:tint="#F8F8F8"
             android:gravity="center" />
     </item>
     <item android:top="7dp">
@@ -11,7 +11,7 @@
                 android:radius="@dimen/ninchat_chat_activity_message_bubble_corner_radius"
                 android:topLeftRadius="0dp"
                 />
-            <solid android:color="@color/ninchat_backgroundColorDisabled" />
+            <solid android:color="#F8F8F8" />
         </shape>
     </item>
     <item>
