--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_secondary_onclicked_button.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_secondary_onclicked_button.xml
@@ -6,6 +6,6 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="@color/ninchat_colorOnClicked"
+        android:color="#006FCE"
         />
 </shape>
