--- a/ninchatsdk/src/main/res/drawable/ninchat_radio_select_button.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_radio_select_button.xml
@@ -5,6 +5,6 @@
         />
     <stroke
         android:width="2dp"
-        android:color="@color/ninchat_colorAccent"
+        android:color="#008AFF"
         />
 </shape>
